--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     src="francais.png" 
                     alt="Drapeau Français"
                 />
-                <span  class="langue">Français : <br>langue maternelle</span><br><br>
+                <span  class="langue">Français : langue maternelle</span><br><br>
                 <img class="logoEn"
                     src="anglais.png" 
                     alt="Drapeau Anglais"
