--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div id="div4">
             <h3>Langages de programmation</h3>
                     <ul class="langages">
-                        <li>Shell Bash, Nzh</li>
+                        <li>Shell Bash</li>
                         <li>Python</li>
                         <li>JavaScript</li>
                         <li>Java</li>
