--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                             Master 1 de Bio-Informatique 
                         </a> <br> 
                     <span class="precision">
-                        Parcours : Biologie Computationnelle, Option : Web Avancé et 
-                        Modélisation des Processus Dynamiques, en cours.
+                        Parcours : Biologie Computationnelle; Option : Web Avancé et 
+                        Modélisation des Processus Dynamiques; en cours.
                     </span>
                     <span class="employeur">
                         <a href="https://www.u-bordeaux.fr">Université de Bordeaux</a>
@@ -155,14 +155,16 @@
                         <li>CSS</li>
                         <li>R</li>
                         <li>LaTeX</li>
+                        <li>C++</li>
+                        <li>SQL</li>
                     </ul>
             <h3>Outils, environnements</h3>
                     <ul>
                         <li>Systèmes d'exploitation :<span class="divers"> MacOS, Linux, Windows</span></li>
                         <li>Editeurs de Texte : <span class="divers">Visual Studio Code, Emacs, Sublime Text</span></li>
                         <li>Traitement d'images : <span class="divers">ImageJ</span></li>
-                        <li>Traitement de données : <span class="divers">R-Studio</span></li>
-                        <li>Traitement de texte et tableurs : <span class="divers">Microsoft Office, Libre Office</span></li>
+                        <li>Traitement de données : <span class="divers">R-Studio, PostgresSQL</span></li>
+                        <li>Traitement de texte et tableurs : <span class="divers">Overleaf, Microsoft Office, Libre Office</span></li>
                     </ul>
             </div>
             <a class="haut" href="#Haut">Haut de page</a>
@@ -197,7 +199,7 @@
             <div id="div6">
                 <ul>
                     <li>Permis B</li>
-                    <li>Vente à domicile : <span class="divers">Parfumerie</span></li>
+                    <li>Vente à domicile : <span class="divers">Parfumerie (Société Marcus Spurway)</span></li>
                     <li>Méditation</li>
                     <li>Loisirs: <span class="divers">Cuisine, Lecture, Jeux Vidéo</span></li>
                     <li>Sports: <span class="divers">Marche, Pilates, Fitness</span></li>
@@ -215,8 +217,8 @@
     <a id="Bas"></a>
     <footer>
         <div>
-            Code réalisé selon les recommandations et validé par W3C<br>
-            <span class="dateW3C">le 20 Février 2020</span><br>
+            Code réalisé selon les recommandations et validé par W3C,<br>
+            <span class="dateW3C">le 13 Mai 2020</span><br>
             En ligne : <a href="https://validator.w3.org" target="blank">Site Web W3C</a><br>
             Tous droits réservés.<br><br>
             <form class="contact">
