--- a/index.html
+++ b/index.html
@@ -57,15 +57,17 @@
                 <p>
                     <span class="date"> Septembre 2019 : </span> 
                     Reprise d'études en 
-                        <a href="https://master-bioinfo-bordeaux.github.io/?fbclid=IwAR106PSM_dQjaGU755saNukLNx0DxDwaeX8VTOcCqeQlJCefMVzYUzImYc4">
+                        <a href="https://master-bioinfo-bordeaux.github.io/?fbclid=IwAR106PSM_dQjaGU755saNukLNx0DxDwaeX8VTOcCqeQlJCefMVzYUzImYc4" target="blank">
                             Master 1 de Bio-Informatique 
                         </a> <br> 
                     <span class="precision">
-                        Parcours : Biologie Computationnelle; Option : Web Avancé et 
-                        Modélisation des Processus Dynamiques; en cours.
+                        Parcours : Biologie Computationnelle; 
+                        Option : Web Avancé et Modélisation des Processus Dynamiques. <br>
+                        Projet de recherche et développement : Développement d'un modèle computationnel du cycle éveil/sommeil chez le rongeur, encadré par <a href="http://herice.charlotte.free.fr" target="blank">Dr. Héricé Charlotte</a> du CBMN à Bordeaux. <br> 
+                        Année universitaire en cours.
                     </span>
                     <span class="employeur">
-                        <a href="https://www.u-bordeaux.fr">Université de Bordeaux</a>
+                        <a href="https://www.u-bordeaux.fr" target="blank">Université de Bordeaux</a>
                     </span>
                 </p>
                 <p>
