--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <li>Permis B</li>
                     <li>Vente à domicile : <span class="divers">Parfumerie (Société Marcus Spurway)</span></li>
                     <li>Méditation</li>
-                    <li>Loisirs: <span class="divers">Cuisine, Lecture, Jeux Vidéo</span></li>
+                    <li>Loisirs: <span class="divers">Cuisine, Lecture, Jeux Vidéo, Jeux de Société</span></li>
                     <li>Sports: <span class="divers">Marche, Pilates, Fitness</span></li>
                 </ul>
             </div><br>
