--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             Master de Bio-Informatique 
                         </a> <br> 
                     <span class="precision">
-                        Parcours : Biologie Computationnelle; 
+                        Parcours : Biologie Computationnelle. <br>
                         Option M1 : Web Avancé et Modélisation des Processus Dynamiques. <br>
                         Option M2 : Approche objet (Java) et approche DDD (Domain Driven Design).  <br>
                         Projet de recherche et développement : Développement d'un modèle computationnel du cycle éveil/sommeil chez le rongeur, encadré par <a href="http://herice.charlotte.free.fr" target="blank">Dr. Héricé Charlotte</a> du CBMN à Bordeaux. <br> 
