--- a/index.html
+++ b/index.html
@@ -117,8 +117,10 @@
                         <span class="contrat">Contrat à Durée Indéterminée</span>
                         <span class="precision">
                             Référente SSR lors de la certification de l'établissement par 
-                            l'Agence Régionale de la Santé (2016), Formation interne en raisonnement clinique,
-                            Formation Coloplast sur les soins de stomie, Formation qualifiante sur le tutorat d'étudiants. 
+                            l'Agence Régionale de la Santé (2016).<br>
+                            Formation interne en raisonnement clinique.<br>
+                            Formation Coloplast sur les soins de stomie.<br>
+                            Formation qualifiante sur le tutorat d'étudiants. 
                         </span>
                         <span class="employeur">Clinique Pasteur, rue du professeur Pozzi, Bergerac (24100)</span>
                     </p>
@@ -142,7 +144,7 @@
                         Développement de l’interface utilisateur d’un serious game ayant pour but de développer la pensée 
                         informatique chez les apprenants et d’étudier le fonctionnement de l’apprentissage humain à l’aide 
                         de l’apprentissage machine.<br>
-                        Participation à la création graphique et scénaristique du serious game
+                        Participation à la création graphique et scénaristique du serious game.
                     </span> <br> 
                     <span class="employeur">Inria Bordeaux Sud-Ouest, équipe Mnemosyne, action exploratoire AIDE (Artificial Intelligence Devoted to Education).</span>
                 </p> 
@@ -160,12 +162,12 @@
                 <p>
                     <span class="date">2020 : </span><br>
                     <a href="https://hal.inria.fr/hal-02935633" target="blank">Lola Denet. Le dispositif Tabletop du projet AIDE : développement de son interface utilisateur. 
-                    [Rapport Technique] RT-0508, Inria Bordeaux Sud-Ouest. 2020, pp.14. </a><br>
+                    [Rapport Technique] RT-0508, Inria Bordeaux Sud-Ouest. 2020, pp.14. </a><br><br>
                     </span>
                     
                     <span class="date">2020 : </span><br>
                     <a href="https://hal.inria.fr/hal-03040909" target="blank">Sabrina Barnabé, Lola Denet, Mathieu Manrique, Divya Menon, Éric Pascual, et al. A low-cost tabletop 
-                        game to collect learning analytics during computational thinking using unplugged or tangible activities. [Research Report] RR-9379, Inria. 2020. </a> <br>
+                        game to collect learning analytics during computational thinking using unplugged or tangible activities. [Research Report] RR-9379, Inria. 2020. </a> <br><br>
                     <span class="date">2014</span><br>
                     Lola Denet. Harmonisation des pratiques professionnelles – Prendre soin du nouveau-né et de ses parents par le biais de pratiques soignantes. 
                     [Mémoire de Fin d’Études], IFSI Vil-leneuve-sur-Lot. 2014. (non disponible en ligne)
@@ -197,7 +199,7 @@
                         <li>Environnement : <span class="divers">Visual Studio Code</span></li>
                         <li>Traitement d'images : <span class="divers">ImageJ, Gimp</span></li>
                         <li>Traitement de données : <span class="divers">R-Studio, PostgresSQL</span></li>
-                        <li>Ontologie : Protégé</li>
+                        <li>Ontologie : <span class="divers">Protégé</span></li>
                         <li>Traitement de texte et tableurs : <span class="divers">Overleaf, Microsoft Office, Libre Office</span></li>
                     </ul>
             <h3>Autres Compétences</h3>
