--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     <a id="Bas"></a>
     <footer>
         <div>
-            Code réalisé selon les recommandations et validé par W3C,<br>
+            Code réalisé selon les recommandations et validé par W3C,
             <span class="dateW3C">le 11 Mai 2021</span><br>
             En ligne : <a href="https://validator.w3.org" target="blank">Site Web W3C</a><br>
             Tous droits réservés.<br><br>
