--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <span class="precision">
                         Parcours : Biologie Computationnelle. <br>
                         Option M1 : Web Avancé et Modélisation des Processus Dynamiques. <br>
-                        Option M2 : Approche objet (Java) et approche DDD (Domain Driven Design).  <br>
+                        Option M2 : Approche objet (Java) et approche DDD (Domain Driven Design).  <br><br>
                         Projet de recherche et développement : Développement d'un modèle computationnel du cycle éveil/sommeil chez le rongeur, encadré par <a href="http://herice.charlotte.free.fr" target="blank">Dr. Héricé Charlotte</a> du CBMN à Bordeaux. <br> 
                         Projet de génie logiciel : Développement d'une plateforme en ligne regroupant des outils bio-informatiques pour la phylogénie dans le cadre du programme <a href="https://www.sentinelles-climat.org/a-propos/" target="blank">"Les sentinelles du climat"</a>
                         Année universitaire de master 2 en cours.
