--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
     <div>
         <form>
             <input class="impression" type="button" onclick="imprimer_page()" value="Imprimer le CV"/>
+            <input class="impression" type="button" download="CV_LolaDenet.pdf" value="Télécharger le CV"/>
         </form>
     </div><br>
 
