--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     <div>
         <form>
             <input class="impression" type="button" onclick="imprimer_page()" value="Imprimer le CV"/>
-            <input class="impression" type="button" download="CV_LolaDENET.pdf" value="Télécharger le CV"/>
+            <a href="./CV_LolaDENET.pdf" class="impression" type="button" download="CV_LolaDENET.pdf">Télécharger le CV</a>
         </form>
     </div><br>
 
