--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Curriculum Vitae, Bio-Informatique"/>
     <meta name="author" content="Denet Lola"/>
     <link rel="stylesheet" href="Style/CV_perso.css"/>
-    <link rel="stylesheet" href="Style/print.css" media="print"/>
+    <!--<link rel="stylesheet" href="Style/print.css" media="print"/>-->
     <title>Curriculum Vitae</title>
 </head>
 
@@ -249,8 +249,8 @@
             
     <div>
         <form>
-            <input class="impression" type="button" onclick="imprimer_page()" value="Imprimer le CV"/>
-            <a href="./CV_LolaDENET.pdf" class="impression" type="button" download="CV_LolaDENET.pdf">Télécharger le CV</a>
+            <!--<input class="impression" type="button" onclick="imprimer_page()" value="Imprimer le CV"/>-->
+            <a class="telecharger" href="./CV_LolaDENET.pdf"  target="blank" download="CV_LolaDENET.pdf">Télécharger le CV</a>
         </form>
     </div><br>
 
