--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                         Option M1 : Web Avancé et Modélisation des Processus Dynamiques. <br>
                         Option M2 : Approche objet (Java) et approche DDD (Domain Driven Design).  <br><br>
                         Projet de recherche et développement : Développement d'un modèle computationnel du cycle éveil/sommeil chez le rongeur, encadré par <a href="http://herice.charlotte.free.fr" target="blank">Dr. Héricé Charlotte</a> du CBMN à Bordeaux. <br> 
-                        Projet de génie logiciel : Développement d'une plateforme en ligne regroupant des outils bio-informatiques pour la phylogénie dans le cadre du programme <a href="https://www.sentinelles-climat.org/a-propos/" target="blank">"Les sentinelles du climat"</a>
+                        Projet de génie logiciel : Développement d'une plateforme en ligne regroupant des outils bio-informatiques pour la phylogénie dans le cadre du programme <a href="https://www.sentinelles-climat.org/a-propos/" target="blank">"Les sentinelles du climat"</a><br><br>
+                        MOOC certifiants : <a href="https://www.fun-mooc.fr/fr/cours/lintelligence-artificielle-avec-intelligence/" target="blank">Intelligence artificielle avec intelligence</a>, <a href="https://course.elementsofai.com/fr/" target= "blank">Elements of AI</a>, <a href="https://www.fun-mooc.fr/fr/cours/web-semantique-et-web-de-donnees/" target="blank">Web semantique et web de données</a>.<br><br>
                         Année universitaire de master 2 en cours.
                     </span>
                     <span class="employeur">
@@ -76,8 +77,8 @@
                     <span class="date"> Juillet 2014 : </span> 
                     Diplôme d'Etat d'Infirmière (Grade Licence) <br> 
                     <span class="precision">
-                        Travail de Fin d'Etudes : Harmonisation des pratiques professionnelles dans la 
-                        prévention de la douleur chez le nouveau-né.
+                        Travail de Fin d'Etudes : Harmonisation des pratiques professionnelles – 
+                        Prendre soin du nouveau-né et de ses parents par le biais de pratiques soignantes. 
                     </span>
                     <span class="employeur">Institut de Formation en Soins Infirmiers, Villeneuve-Sur-Lot (47300)</span>
                 </p>
@@ -98,15 +99,13 @@
             <h3>Emplois</h3>
                     <p>
                         <span class="date">Août 2019 : </span><br>
-                        Infirmière DE vacataire
-                        <span class="contrat">Contrats à Durée Déterminée</span>
+                        Infirmière DE vacataire<br>
                         <span class="precision">Missions intérimaires dans des structures sanitaires et médico-sociales</span>
                         <span class="employeur">Appel Médical, Périgueux (24000)</span>
                     </p>
                     <p>
                         <span class="date">Janvier 2019 - Août 2019 : </span><br>
                         Infirmière DE en Unité d'Hospitalisation pour Adolescent (UHA)<br>
-                        <span class="contrat">Contrat à durée Déterminée</span> <br>
                         <span class="precision">Formation interne sur la prise en charge des psychopathologies</span> <br>
                         <span class="employeur">Centre Hospitalier Spécialisé de Vauclaire, Bergerac (24100)</span>
                     </p>
@@ -168,7 +167,8 @@
                     <span class="date">2020 : </span><br>
                     <a href="https://hal.inria.fr/hal-03040909" target="blank">Sabrina Barnabé, Lola Denet, Mathieu Manrique, Divya Menon, Éric Pascual, et al. A low-cost tabletop 
                         game to collect learning analytics during computational thinking using unplugged or tangible activities. [Research Report] RR-9379, Inria. 2020. </a> <br><br>
-                    <span class="date">2014</span><br>
+                    <span class="date">2014</span><br><br>
+
                     Lola Denet. Harmonisation des pratiques professionnelles – Prendre soin du nouveau-né et de ses parents par le biais de pratiques soignantes. 
                     [Mémoire de Fin d’Études], IFSI Vil-leneuve-sur-Lot. 2014. (non disponible en ligne)
                 </p>
@@ -243,7 +243,7 @@
                     <li>Permis B.</li>
                     <li>Participation à la nuit de l’informatique en décembre 2019 (Université de Bordeaux).</li>
                     <li>Vente à domicile : <span class="divers">Parfumerie (Société Marcus Spurway).</span></li>
-                    <li>Loisirs: <span class="divers">Lecture, Jeux Vidéo, Jeux de Société.</span></li>
+                    <li>Centres d'intérêt: <span class="divers">Lecture, Jeux Vidéo, Jeux de Société, cinéma.</span></li>
                 </ul>
             </div><br>
             
